<resources>
    <string name="app_name" translatable="false">calculator</string>
    <string name="button_CE" translatable="false">CE</string>
    <string name="button_C">C</string>
    <string name="button_percent">%</string>
    <string name="button_add">+</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button_sub">-</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button_mul">*</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_div">/</string>
    <string name="button0">0</string>
    <string name="button_point">.</string>
    <string name="button_equals">=</string>
    <string name="theme1">default</string>
    <string name="theme2">blue</string>
    <string name="theme3">purple</string>
    <string name="theme4">green</string>
    <string name="tv_theme">Choosing a theme:</string>
    <string name="button_theme">Set theme</string>
    <string name="button_start">Start calculator</string>

</resources>