<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="4"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_CE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_CE"            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_C" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:text="@string/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sub"
            android:layout_width="wrap_content"
            android:text="@string/button_sub" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_mul" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_div"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/button0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_point" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_equals" />
    </TableRow>

</TableLayout>