<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:srcCompat="@drawable/astronomy"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_theme"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_themeDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme1"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_themeBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_100"
            android:text="@string/theme2" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_themePurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_100"
            android:text="@string/theme3" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_themeGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green_100"
            android:text="@string/theme4"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>